[gd_scene load_steps=6 format=3 uid="uid://cuayya2yogxre"]

[ext_resource type="PackedScene" uid="uid://q52p8ub1ab2w" path="res://CardMap/Level/Level.tscn" id="1_ol36e"]
[ext_resource type="Script" path="res://CardMap/Map/Map.gd" id="1_tyuay"]

[sub_resource type="Animation" id="Animation_w3kvj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/ScrollContainer:scroll_vertical")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v2qf1"]
resource_name = "to_bottom"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/ScrollContainer:scroll_vertical")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2298]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s756t"]
_data = {
"RESET": SubResource("Animation_w3kvj"),
"to_bottom": SubResource("Animation_v2qf1")
}

[node name="Map" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tyuay")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 40

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Level15" parent="MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 15

[node name="Level14" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 14
nextLevel = NodePath("../Level15")

[node name="Level13" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 13
nextLevel = NodePath("../Level14")

[node name="Level12" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 12
nextLevel = NodePath("../Level13")

[node name="Level11" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 11
nextLevel = NodePath("../Level12")

[node name="Level10" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 10
nextLevel = NodePath("../Level11")

[node name="Level9" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 9
nextLevel = NodePath("../Level10")

[node name="Level8" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 8
nextLevel = NodePath("../Level9")

[node name="Level7" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 7
nextLevel = NodePath("../Level8")

[node name="Level6" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 6
nextLevel = NodePath("../Level7")

[node name="Level5" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 5
nextLevel = NodePath("../Level6")

[node name="Level4" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 4
nextLevel = NodePath("../Level5")

[node name="Level3" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 3
nextLevel = NodePath("../Level4")

[node name="Level2" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 2
nextLevel = NodePath("../Level3")

[node name="Level1" parent="MarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("nextLevel") instance=ExtResource("1_ol36e")]
layout_mode = 2
level = 1
nextLevel = NodePath("../Level2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s756t")
}
